<resources>
    <string name="app_name">AboutMe</string>
    <string name="name">Jorge</string>
    <string name="yellow_star">Yellow star</string>
    <string name="bio">Lorem ipsum dolor sit amet consectetur adipiscing elit venenatis ultricies, rutrum nisi sodales quisque congue eleifend non gravida, porta ante cras porttitor fames urna parturient viverra. Magnis viverra ridiculus est suspendisse suscipit pulvinar habitant magna, tincidunt integer ad morbi euismod rutrum nostra, pellentesque nibh inceptos dictum imperdiet phasellus quisque. At aptent ligula ridiculus nostra eleifend sollicitudin dignissim pretium natoque, ante sodales interdum egestas mattis himenaeos facilisis aliquam.  Ac potenti magnis inceptos libero integer sem facilisis at bibendum tincidunt, ad ultricies suspendisse habitasse donec congue curabitur velit mus maecenas, sociis fames molestie nostra interdum dictumst pulvinar imperdiet mattis. Dapibus imperdiet senectus curabitur hac etiam urna leo platea montes himenaeos praesent, posuere parturient varius ultricies tellus mi vitae elementum sem est, cum accumsan pellentesque placerat risus convallis nostra velit sociis condimentum. Bibendum himenaeos fermentum vulputate nostra ullamcorper lectus elementum, dui class condimentum diam platea quisque a fusce, quam scelerisque vehicula cras pellentesque ultrices. Lorem ipsum dolor sit amet consectetur adipiscing elit venenatis ultricies, rutrum nisi sodales quisque congue eleifend non gravida, porta ante cras porttitor fames urna parturient viverra. Magnis viverra ridiculus est suspendisse suscipit pulvinar habitant magna, tincidunt integer ad morbi euismod rutrum nostra, pellentesque nibh inceptos dictum imperdiet phasellus quisque. At aptent ligula ridiculus nostra eleifend sollicitudin dignissim pretium natoque, ante sodales interdum egestas mattis himenaeos facilisis aliquam.  Ac potenti magnis inceptos libero integer sem facilisis at bibendum tincidunt, ad ultricies suspendisse habitasse donec congue curabitur velit mus maecenas, sociis fames molestie nostra interdum dictumst pulvinar imperdiet mattis. Dapibus imperdiet senectus curabitur hac etiam urna leo platea montes himenaeos praesent, posuere parturient varius ultricies tellus mi vitae elementum sem est, cum accumsan pellentesque placerat risus convallis nostra velit sociis condimentum. Bibendum himenaeos fermentum vulputate nostra ullamcorper lectus elementum, dui class condimentum diam platea quisque a fusce, quam scelerisque vehicula cras pellentesque ultrices. Lorem ipsum dolor sit amet consectetur adipiscing elit venenatis ultricies, rutrum nisi sodales quisque congue eleifend non gravida, porta ante cras porttitor fames urna parturient viverra. Magnis viverra ridiculus est suspendisse suscipit pulvinar habitant magna, tincidunt integer ad morbi euismod rutrum nostra, pellentesque nibh inceptos dictum imperdiet phasellus quisque. At aptent ligula ridiculus nostra eleifend sollicitudin dignissim pretium natoque, ante sodales interdum egestas mattis himenaeos facilisis aliquam.  Ac potenti magnis inceptos libero integer sem facilisis at bibendum tincidunt, ad ultricies suspendisse habitasse donec congue curabitur velit mus maecenas, sociis fames molestie nostra interdum dictumst pulvinar imperdiet mattis. Dapibus imperdiet senectus curabitur hac etiam urna leo platea montes himenaeos praesent, posuere parturient varius ultricies tellus mi vitae elementum sem est, cum accumsan pellentesque placerat risus convallis nostra velit sociis condimentum. Bibendum himenaeos fermentum vulputate nostra ullamcorper lectus elementum, dui class condimentum diam platea quisque a fusce, quam scelerisque vehicula cras pellentesque ultrices.</string>
    <string name="what_is_your_nickname">What is your nickname?</string>
    <string name="done">Done</string>
</resources>